fix sorting + scroll always visible

--- a/src/global.scss
+++ b/src/global.scss
@@ -14,6 +14,10 @@
   background: rgba(255, 255, 255, 0.6)
 }
 
+.ReactTable .rt-tbody {
+  overflow-y: scroll;
+}
+
 .ReactTable .rt-thead {
   color: white;
   text-align: left;
